welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: ')' expected but ';' found.
      (gauche();avance();gauche();)
               ^SnakeBuggle:8: error: illegal start of statement
      (gauche();avance();gauche();)
                                  ^SnakeBuggle:11: error: ')' expected but ';' found.
      (droite();avance();droite();)
               ^SnakeBuggle:11: error: illegal start of statement
      (droite();avance();droite();)
                                  ^